// Special akiban_information_schema protobuf extensions description file

import "akiban_information_schema.proto";

package akiban_schema.protobuf;
option java_package = "com.foundationdb.ais.protobuf";
option java_outer_classname = "CommonProtobuf";

enum MemoryTableType {
    MEMORY_TABLE_FACTORY = 1;
}

extend Storage {
    optional MemoryTableType memory_table = 1001;
    optional string full_text_index_path = 1002;
}
